Corrección problema de editar una rutina, ya se puede eliminar ejercicios de una rutina, cambiar nombre y descripción